Scroll system was reworked

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="body.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scroll.js"></script>
     <script type="text/javascript" src="grid.js"></script>
 
   </head>
@@ -143,6 +143,7 @@
           <br>
         </div>
       </div>
+      <div class="upbutton container"><img src="Icons\up-arrow-button.png" alt=""></div>
     </div>
     <div class="wallpaper grid">
 
