Footer was made

--- a/main.html
+++ b/main.html
@@ -38,8 +38,7 @@
         </div>
       </div>
     </div>
-
-      <div class="options panel">
+    <div class="options panel">
         <div class="wrapperOptions">
           <div id="categoryName">Nature wallpaper HD</div>
           <div class="sort panel">
@@ -52,8 +51,7 @@
             <img id="nine" src="Icons\blue_nine_grid.png" alt=""></div>
         </div>
       </div>
-
-      <div class="main content">
+    <div class="main content">
 
         <div class="left side">
 
@@ -153,7 +151,6 @@
           <div class="upbutton container"><img src="Icons\up-arrow-button.png" alt=""></div>
 
         </div>
-
         <div class="right side">
 
           <div class="wallpaper grid">
@@ -211,13 +208,16 @@
               <a class="pagin-link forward" href="#">></a>
             </div>
 
-
           </div>
 
         </div>
 
       </div>
 
+    <div class="footer">
+      <div class="license-area">© 2020–2025, WallpaperBg</div>
+      <div class="filler-area">Desktop WallpaperBg, Backgrounds HD</div>
+    </div>
 
 
   </body>
