Sort button was finished and also made some animations

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scroll.js"></script>
     <script type="text/javascript" src="grid.js"></script>
     <script type="text/javascript" src="pagination.js"></script>
+        <script type="text/javascript" src="sort_panel.js"></script>
 
   </head>
   <body>
@@ -42,8 +43,13 @@
         <div class="wrapperOptions">
           <div id="categoryName">Nature wallpaper HD</div>
           <div class="sort panel">
-            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt="">
-            </button>
+            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
+            <div class="dropdown-content sort" id="e">
+              <div class="lg_button_option"><a href="#">English</a></div>
+              <div class="lg_button_option"><a href="#">English</a></div>
+              <div class="lg_button_option"><a href="#">English</a></div>
+              <div class="lg_button_option"><a href="#">English</a></div>
+            </div>
           </div>
           <div class="grid panel">
             <img id="two" src="Icons\blue_two_grid.png" alt="">
