Disappear bug with language bar was fixed

--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
             <button type="button" class="search button"name="button"><span class = "search button"></span></button>
         </div>
         <div class="lgbar">
+          <div class="lgwrapper">
           <div class="flexVertical">
             <div id="lg">En</div>
             <div class="dropdown-content">
@@ -34,7 +35,8 @@
               <div class="lg_button_option"><a href="#"><img src="Icons\Ukrainian.png" alt=""></a></div>
             </div>
           </div>
-          <img src="Icons\arrow.png" id="arrow" alt="">
+            <img src="Icons\arrow.png" id="arrow" alt="">
+          </div>
         </div>
       </div>
       <div class="wrapper active">
