Adaptive header and body was reworked and ready

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="scroll.js"></script>
     <script type="text/javascript" src="grid.js"></script>
     <script type="text/javascript" src="pagination.js"></script>
-    <script type="text/javascript" src="sort_panel.js"></script>
+    <script type="text/javascript" src="panel.js"></script>
     <script type="text/javascript" src="searchbar.js"></script>
 
   </head>
@@ -57,10 +57,22 @@
           <div class="sort panel">
             <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
             <div class="dropdown-content sort" id="e">
-              <div class="lg_button_option"><a href="#">English</a></div>
-              <div class="lg_button_option"><a href="#">English</a></div>
-              <div class="lg_button_option"><a href="#">English</a></div>
-              <div class="lg_button_option"><a href="#">English</a></div>
+              <div class="lg_button_option"><a href="#">Lorem ipsum dolor</a></div>
+              <div class="lg_button_option"><a href="#">ipsum </a></div>
+              <div class="lg_button_option"><a href="#">dolor</a></div>
+            </div>
+          </div>
+          <div class="category panel">
+            <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
+            <div class="dropdown-content sort" id="e">
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
             </div>
           </div>
           <div class="grid panel">
