Grid system was reworked

--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
           <div id="categoryName">Nature wallpaper HD</div>
           <div class="sort panel">
             <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
-            <div class="dropdown-content sort" id="e">
+            <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="#">Lorem ipsum dolor</a></div>
               <div class="lg_button_option"><a href="#">ipsum </a></div>
               <div class="lg_button_option"><a href="#">dolor</a></div>
@@ -64,7 +64,7 @@
           </div>
           <div class="category panel">
             <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
-            <div class="dropdown-content sort" id="e">
+            <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="">All</a></div>
               <div class="lg_button_option"><a href="">Nature</a></div>
               <div class="lg_button_option"><a href="">All</a></div>
