Custom scrollbar is supporting in firefix now

--- a/main.html
+++ b/main.html
@@ -73,6 +73,18 @@
               <div class="lg_button_option"><a href="">Nature</a></div>
               <div class="lg_button_option"><a href="">All</a></div>
               <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
+              <div class="lg_button_option"><a href="">All</a></div>
+              <div class="lg_button_option"><a href="">Nature</a></div>
             </div>
           </div>
           <div class="grid panel">
