FIles structere was changed

--- a/main.html
+++ b/main.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="body.css">
-    <link rel="stylesheet" href="adaptive.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/adaptive.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="scroll.js"></script>
-    <script type="text/javascript" src="grid.js"></script>
-    <script type="text/javascript" src="pagination.js"></script>
-    <script type="text/javascript" src="panel.js"></script>
-    <script type="text/javascript" src="searchbar.js"></script>
+    <script type="text/javascript" src="js/scroll.js"></script>
+    <script type="text/javascript" src="js/grid.js"></script>
+    <script type="text/javascript" src="js/pagination.js"></script>
+    <script type="text/javascript" src="js/panel.js"></script>
+    <script type="text/javascript" src="js/searchbar.js"></script>
 
   </head>
   <body>
     <div class="header">
       <div class="wrapper">
         <div class="logo">
-          <img id="logo" src="Icons\WallpaperBg.png" alt="">
+          <img id="logo" src="icons\WallpaperBg.png" alt="">
         </div>
         <div class="searchbar">
             <input class="search input" placeholder="Search"/>
@@ -31,11 +31,11 @@
           <div class="flexVertical">
             <div id="lg">En</div>
             <div class="dropdown-content">
-              <div class="lg_button_option"><a href="#"><img src="Icons\English.png" alt=""></a></div>
-              <div class="lg_button_option"><a href="#"><img src="Icons\Ukrainian.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="icons\English.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="icons\Ukrainian.png" alt=""></a></div>
             </div>
           </div>
-            <img src="Icons\arrow.png" id="arrow" alt="">
+            <img src="icons\arrow.png" id="arrow" alt="">
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <div class="wrapperOptions">
           <div id="categoryName">Nature wallpaper HD</div>
           <div class="sort panel">
-            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
+            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="icons\blue_arrow.png" alt=""></button>
             <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="#">Lorem ipsum dolor</a></div>
               <div class="lg_button_option"><a href="#">ipsum </a></div>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="category panel">
-            <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="Icons\blue_arrow.png" alt=""></button>
+            <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="icons\blue_arrow.png" alt=""></button>
             <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="">All</a></div>
               <div class="lg_button_option"><a href="">Nature</a></div>
@@ -88,9 +88,9 @@
             </div>
           </div>
           <div class="grid panel">
-            <img id="two" src="Icons\blue_two_grid.png" alt="">
-            <img id="four" src="Icons\blue_four_grid.png" alt="">
-            <img id="nine" src="Icons\blue_nine_grid.png" alt=""></div>
+            <img id="two" src="icons\blue_two_grid.png" alt="">
+            <img id="four" src="icons\blue_four_grid.png" alt="">
+            <img id="nine" src="icons\blue_nine_grid.png" alt=""></div>
         </div>
       </div>
     <div class="main content">
@@ -190,7 +190,7 @@
             </div>
           </div>
 
-          <div class="upbutton container"><img src="Icons\up-arrow-button.png" alt=""></div>
+          <div class="upbutton container"><img src="icons\up-arrow-button.png" alt=""></div>
 
         </div>
         <div class="right side">
