Main part in page.html was done

--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/page_styles.css">
+    <link rel="stylesheet" href="css/page_body.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- <link rel="stylesheet" href="css/adaptive.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -51,10 +51,24 @@
 
     </div>
     <div class="main_content">
-      <div class="left side">
-        <img src="https://i.pinimg.com/originals/5e/65/20/5e6520289b44e11a9e74363c18ce3ee1.jpg" alt="">
+      <div class="top side">
+        <img class="main wallpaper"src="https://i.pinimg.com/originals/5e/65/20/5e6520289b44e11a9e74363c18ce3ee1.jpg" alt="">
+        <div class="tags-area">
+            <button class="tag">Nature</button>
+            <button class="tag">Nature</button>
+            <button class="tag">Nature</button>
+            <button class="tag">Nature</button>
+            <button class="tag">Nature</button>
+          </div>
+        <div class="download-area">
+          <button href="#" class="download-button">
+              <div class="download-icon"></div>
+              <div class="download-text">Download</div> 
+
+          </button>
+        </div>
       </div>
-      <div class="right side">
+      <!-- <div class="bottom side">
         <div class="gui-heading">Similar wallpapers</div>
         <div class="recommended images container">
           <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
@@ -65,7 +79,7 @@
 
 
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="footer">
       <div class="license-area">© 2020–2025, WallpaperBg</div>
