Grid for bottom part was done

--- a/page.html
+++ b/page.html
@@ -63,12 +63,12 @@
         <div class="download-area">
           <button href="#" class="download-button">
               <div class="download-icon"></div>
-              <div class="download-text">Download</div> 
+              <div class="download-text">Download</div>
 
           </button>
         </div>
       </div>
-      <!-- <div class="bottom side">
+      <div class="bottom side">
         <div class="gui-heading">Similar wallpapers</div>
         <div class="recommended images container">
           <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
@@ -76,10 +76,11 @@
           <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
           <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
           <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
+          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
 
 
         </div>
-      </div> -->
+      </div>
     </div>
     <div class="footer">
       <div class="license-area">© 2020–2025, WallpaperBg</div>
