page.html adaptive design was done

--- a/page.html
+++ b/page.html
@@ -8,20 +8,25 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/page_body.css">
     <link rel="stylesheet" href="css/footer.css">
-    <!-- <link rel="stylesheet" href="css/adaptive.css"> -->
+    <link rel="stylesheet" href="css/adaptive.css">
+    <link rel="stylesheet" href="css/page-adaptive.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/searchbar.js"></script>
+    <script type="text/javascript" src="js/grid.js"></script>
     <!-- <script type="text/javascript" src="js/scroll.js"></script>
     <script type="text/javascript" src="js/grid.js"></script>
     <script type="text/javascript" src="js/panel.js"></script>
-    <script type="text/javascript" src="js/searchbar.js"></script>
-    <script type="text/javascript" src="js/scroll.js"></script> -->
+    <script type="text/javascript" src="js/searchbar.js"></script>-->
+    <!-- <script type="text/javascript" src="js/scroll.js"></script> -->
 
   </head>
   <body>
     <div class="header">
       <div class="wrapper">
         <div class="logo">
+          <a href="main.html">
           <img id="logo" src="icons\WallpaperBg.png" alt="">
+          </a>
         </div>
         <div class="searchbar">
             <input class="search input" placeholder="Search"/>
@@ -70,13 +75,14 @@
       </div>
       <div class="bottom side">
         <div class="gui-heading">Similar wallpapers</div>
-        <div class="recommended images container">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
-          <img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt="">
+        <div class="recommended images container wallpaper grid">
+
+          <div class="wallpaper"><a href="#"><img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt=""></a></div>
+          <div class="wallpaper"><a href="#"><img src="https://i.pinimg.com/originals/5e/65/20/5e6520289b44e11a9e74363c18ce3ee1.jpg" alt=""></a></div>
+          <div class="wallpaper"><a href="#"><img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt=""></a></div>
+          <div class="wallpaper"><a href="#"><img src="https://i.pinimg.com/originals/5e/65/20/5e6520289b44e11a9e74363c18ce3ee1.jpg" alt=""></a></div>
+          <div class="wallpaper"><a href="#"><img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt=""></a></div>
+          <div class="wallpaper"><a href="#"><img src="https://cdn.wallpapersafari.com/85/30/MLo5Ex.jpg" alt=""></a></div>
 
 
         </div>
