--- a/main.html
+++ b/main.html
@@ -21,7 +21,9 @@
     <div class="header">
       <div class="wrapper">
         <div class="logo">
+          <a href="main.html">
           <img id="logo" src="icons\WallpaperBg.png" alt="">
+          </a>
         </div>
         <div class="searchbar">
             <input class="search input" placeholder="Search"/>
