Icons dir was renamed to assets

--- a/page.html
+++ b/page.html
@@ -20,7 +20,7 @@
       <div class="wrapper">
         <div class="logo">
           <a href="main.html">
-          <img id="logo" src="icons\WallpaperBg.png" alt="">
+          <img id="logo" src="assets\WallpaperBg.png" alt="">
           </a>
         </div>
         <div class="searchbar">
@@ -32,11 +32,11 @@
           <div class="flexVertical">
             <div id="lg">En</div>
             <div class="dropdown-content">
-              <div class="lg_button_option"><a href="#"><img src="icons\English.png" alt=""></a></div>
-              <div class="lg_button_option"><a href="#"><img src="icons\Ukrainian.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="assets\English.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="assets\Ukrainian.png" alt=""></a></div>
             </div>
           </div>
-            <img src="icons\arrow.png" id="arrow" alt="">
+            <img src="assets\arrow.png" id="arrow" alt="">
           </div>
         </div>
       </div>
