--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
       <div class="wrapper">
         <div class="logo">
           <a href="main.html">
-          <img id="logo" src="icons\WallpaperBg.png" alt="">
+          <img id="logo" src="assets\WallpaperBg.png" alt="">
           </a>
         </div>
         <div class="searchbar">
@@ -34,11 +34,11 @@
           <div class="flexVertical">
             <div id="lg">En</div>
             <div class="dropdown-content">
-              <div class="lg_button_option"><a href="#"><img src="icons\English.png" alt=""></a></div>
-              <div class="lg_button_option"><a href="#"><img src="icons\Ukrainian.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="assets\English.png" alt=""></a></div>
+              <div class="lg_button_option"><a href="#"><img src="assets\Ukrainian.png" alt=""></a></div>
             </div>
           </div>
-            <img src="icons\arrow.png" id="arrow" alt="">
+            <img src="assets\arrow.png" id="arrow" alt="">
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="wrapperOptions">
           <div id="categoryName">Nature wallpaper HD</div>
           <div class="sort panel">
-            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="icons\blue_arrow.png" alt=""></button>
+            <button type="button" class="sort button">Sort by :&nbsp;<span class="category sort">Date</span> <img class="sort arrow" src="assets\blue_arrow.png" alt=""></button>
             <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="#">Lorem ipsum dolor</a></div>
               <div class="lg_button_option"><a href="#">ipsum </a></div>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="category panel">
-            <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="icons\blue_arrow.png" alt=""></button>
+            <button type="button" class="category button">Category :&nbsp;<span class="category sort">All</span> <img class="sort arrow" src="assets\blue_arrow.png" alt=""></button>
             <div class="dropdown-content sort scrollmenu" id="e">
               <div class="lg_button_option"><a href="">All</a></div>
               <div class="lg_button_option"><a href="">Nature</a></div>
@@ -91,9 +91,9 @@
             </div>
           </div>
           <div class="grid panel">
-            <img id="two" src="icons\blue_two_grid.png" alt="">
-            <img id="four" src="icons\blue_four_grid.png" alt="">
-            <img id="nine" src="icons\blue_nine_grid.png" alt=""></div>
+            <img id="two" src="assets\blue_two_grid.png" alt="">
+            <img id="four" src="assets\blue_four_grid.png" alt="">
+            <img id="nine" src="assets\blue_nine_grid.png" alt=""></div>
         </div>
       </div>
     <div class="main content">
@@ -193,7 +193,7 @@
             </div>
           </div>
 
-          <div class="upbutton container"><img src="icons\up-arrow-button.png" alt=""></div>
+          <div class="upbutton container"><img src="assets\up-arrow-button.png" alt=""></div>
 
         </div>
         <div class="right side">
